--- a/ws-client/package.json
+++ b/ws-client/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "socket.io-client": "^2.1.1",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-coe-socketio": "^0.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
